Added UI for menu screen and added the colour scheme

--- a/ChoreManager/app/src/main/res/values/colors.xml
+++ b/ChoreManager/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+  <color name="colorPrimary">#80cbc4</color>
+  <color name="primaryLightColor">#b2fef7</color>
+  <color name="colorPrimaryDark">#4f9a94</color>
+  <color name="colorAccent">#c8e6c9</color>
+  <color name="secondaryLightColor">#fbfffc</color>
+  <color name="secondaryDarkColor">#97b498</color>
+  <color name="primaryTextColor">#000000</color>
+  <color name="secondaryTextColor">#000000</color>
 </resources>
