--- a/ChoreManager/app/src/main/res/layout/menu_layout.xml
+++ b/ChoreManager/app/src/main/res/layout/menu_layout.xml
@@ -4,71 +4,108 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alan.peter.bilal.sam.choremanager.MenuActivity">
+
+    tools:context="com.example.alan.peter.bilal.sam.choremanager.MenuActivity"
+    tools:layout_editor_absoluteY="81dp">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-        <TextView
-            android:id="@+id/textView2"
+        <ScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Menu" />
+            android:layout_height="463dp"
+            tools:layout_editor_absoluteY="81dp">
 
-        <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:columnCount="2"
-            android:rowCount="3">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/users"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                app:srcCompat="@android:drawable/screen_background_dark" />
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
 
-            <ImageView
-                android:id="@+id/settings"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                app:srcCompat="@android:drawable/screen_background_dark" />
+                <ImageButton
+                    android:id="@+id/userButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="false"
+                    android:background="@color/secondaryLightColor"
+                    android:contentDescription="TODO"
+                    app:srcCompat="@drawable/user_icon" />
 
-            <ImageView
-                android:id="@+id/tools"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                app:srcCompat="@android:drawable/screen_background_dark" />
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
 
-            <ImageView
-                android:id="@+id/chores"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                app:srcCompat="@android:drawable/screen_background_dark" />
+                <ImageButton
+                    android:id="@+id/settingsButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/secondaryDarkColor"
+                    android:baselineAligned="false"
+                    android:elevation="0dp"
+                    app:srcCompat="@drawable/settings_icon" />
 
-            <ImageView
-                android:id="@+id/pantry"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                app:srcCompat="@android:drawable/screen_background_dark" />
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
 
-            <ImageView
-                android:id="@+id/shoppingList"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                app:srcCompat="@android:drawable/screen_background_dark" />
-        </GridLayout>
+                <ImageButton
+                    android:id="@+id/imageButton5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/secondaryDarkColor"
+                    app:srcCompat="@drawable/materials_icon" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
+
+                <ImageButton
+                    android:id="@+id/imageButton6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/secondaryDarkColor"
+                    app:srcCompat="@drawable/chore_list_icon" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
+
+                <ImageButton
+                    android:id="@+id/imageButton7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/secondaryDarkColor"
+                    app:srcCompat="@drawable/pantry_icon" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
+
+                <ImageButton
+                    android:id="@+id/imageButton8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/secondaryDarkColor"
+                    app:srcCompat="@drawable/shopping_list_icon" />
+
+            </LinearLayout>
+        </ScrollView>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
