--- a/ChoreManager/app/src/main/res/layout/activity_app_login.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_app_login.xml
@@ -70,6 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:background="@color/colorAccent"
                 android:text="@string/action_sign_in"
                 android:textStyle="bold" />
 
