--- a/ChoreManager/app/src/main/res/layout/activity_chore_list.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_chore_list.xml
@@ -10,7 +10,7 @@
         android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="@color/primaryLightColor"
+        android:background="@color/colorAccent"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +21,7 @@
             android:layout_width="4dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/primaryLightColor"
+            android:background="@color/colorAccent"
             android:contentDescription="@string/sort_desc"
             app:srcCompat="@drawable/sort_icon" />
 
@@ -51,7 +51,7 @@
             android:layout_width="4dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/primaryLightColor"
+            android:background="@color/colorAccent"
             android:contentDescription="@string/filter_desc"
             app:srcCompat="@drawable/filter_icon" />
     </LinearLayout>
