--- a/ChoreManager/app/src/main/res/layout/activity_app_login.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_app_login.xml
@@ -14,8 +14,8 @@
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="500dp"
+        android:layout_height="37dp"
         android:layout_marginBottom="8dp"
         android:visibility="gone" />
 
