--- a/ChoreManager/app/src/main/res/layout/activity_new_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_new_chore.xml
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Assign To:"
+                android:text="@string/string_assign_to"
                 android:textSize="20sp" />
 
             <EditText
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Deadline:"
+                android:text="@string/string_deadline"
                 android:textSize="20sp" />
 
             <EditText
@@ -101,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Chore Type:"
+                android:text="@string/string_chore_type"
                 android:textSize="20sp" />
 
             <EditText
@@ -117,7 +117,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="76dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -167,6 +167,7 @@
                 android:layout_height="35dp"
                 android:layout_weight="1"
                 android:background="@color/colorAccent"
+                android:contentDescription="@string/desc_reqmaterials_button"
                 app:srcCompat="@drawable/list_icon" />
 
         </LinearLayout>
@@ -177,15 +178,42 @@
         android:id="@+id/linearLayout6"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="25dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/saveExitButton"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
+
+        <TextView
+            android:id="@+id/desciptionTextTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/secondaryDarkColor"
+            android:gravity="center"
+            android:text="@string/descTitle"
+            android:textColor="@color/secondaryLightColor"
+            android:textSize="20sp" />
+
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="100dp">
+
+            <TextView
+                android:id="@+id/descTextView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/descTextView"
+                tools:layout_editor_absoluteX="69dp"
+                tools:layout_editor_absoluteY="318dp"
+                tools:text="@string/descText" />
+
+        </ScrollView>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
 
         <TextView
             android:id="@+id/noteViewText2"
@@ -199,10 +227,10 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="119dp">
+            android:layout_height="100dp">
 
             <TextView
-                android:id="@+id/descTextView2"
+                android:id="@+id/notesTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/descTextView"
@@ -216,13 +244,18 @@
 
     <Button
         android:id="@+id/saveExitButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:background="@color/colorAccent"
         android:onClick="saveExitOnClick"
         android:text="@string/save_and_exit"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
 
 </android.support.constraint.ConstraintLayout>
