--- a/ChoreManager/app/src/main/res/layout/activity_settings.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/resetButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
