--- a/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
@@ -12,9 +12,10 @@
         android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
         android:layout_height="472dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="2dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/parentCommandText"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -81,83 +82,100 @@
 
             <Button
                 android:id="@+id/incompleteButton"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/colorAccent"
-                android:text="@string/mark_incomplete_button" />
+                android:text="@string/mark_incomplete_button"
+                android:textColor="@color/secondaryTextColor" />
 
             <Button
                 android:id="@+id/completeButton"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
                 android:layout_marginStart="2dp"
                 android:layout_weight="1"
                 android:background="@color/colorAccent"
                 android:text="@string/mark_complete_button"
-                android:layout_marginLeft="2dp" />
+                android:textColor="@color/secondaryTextColor" />
         </LinearLayout>
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/parentCommandText"
-        android:layout_width="match_parent"
-        android:layout_height="27dp"
-        android:background="@color/secondaryDarkColor"
-        android:gravity="center"
-        android:text="@string/parentCommandTitle"
-        android:textColor="@color/secondaryLightColor"
-        android:textSize="20sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="494dp" />
-
     <LinearLayout
-        android:id="@+id/linearLayout8"
-        android:layout_width="395dp"
-        android:layout_height="0dp"
+        android:id="@+id/linearLayout10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/parentCommandText">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/editChoreButton"
-            style="?android:attr/buttonBarButtonStyle"
+        <TextView
+            android:id="@+id/parentCommandText2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/colorAccent"
-            android:text="@string/edit_chore_button"
-            android:textColor="@color/secondaryTextColor" />
+            android:background="@color/secondaryDarkColor"
+            android:gravity="center"
+            android:text="@string/parentCommandTitle"
+            android:textColor="@color/secondaryLightColor"
+            android:textSize="20sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="494dp" />
 
-        <Button
-            android:id="@+id/unassignButton"
-            style="?android:attr/buttonBarButtonStyle"
+        <LinearLayout
+            android:id="@+id/linearLayout8"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginStart="2dp"
-            android:layout_weight="1"
-            android:background="@color/colorAccent"
-            android:text="@string/unassignButton"
-            android:textColor="@color/secondaryTextColor" />
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="8dp"
+            android:gravity="bottom"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
 
-        <Button
-            android:id="@+id/reassignButton"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginStart="2dp"
-            android:layout_weight="1"
-            android:background="@color/colorAccent"
-            android:text="@string/reassignButton"
-            android:textColor="@color/secondaryTextColor" />
+            <Button
+                android:id="@+id/editChoreButton"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:text="@string/edit_chore_button"
+                android:textColor="@color/secondaryTextColor" />
 
+            <Button
+                android:id="@+id/unassignButton"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginStart="2dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:text="@string/unassignButton"
+                android:textColor="@color/secondaryTextColor" />
+
+            <Button
+                android:id="@+id/reassignButton"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginStart="2dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:text="@string/reassignButton"
+                android:textColor="@color/secondaryTextColor" />
+
+        </LinearLayout>
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
