--- a/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
@@ -12,12 +12,12 @@
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:baselineAligned="false"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:baselineAligned="false">
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <ScrollView
             android:id="@+id/materialScrollView"
@@ -181,7 +181,7 @@
         android:layout_width="0dp"
         android:layout_height="27dp"
         android:layout_marginEnd="1dp"
-        android:background="@color/primaryLightColor"
+        android:background="@color/colorAccent"
         android:gravity="center_horizontal"
         android:text="@string/materialsTitle"
         android:textColor="@color/secondaryTextColor"
@@ -189,15 +189,14 @@
         android:textStyle="normal"
         app:layout_constraintEnd_toStartOf="@+id/textView9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="1dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:background="@color/primaryLightColor"
+        android:background="@color/colorAccent"
         android:gravity="center_horizontal"
         android:text="@string/groceriesTitle"
         android:textColor="@color/secondaryTextColor"
@@ -206,7 +205,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="1dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
