fixed description and notes so it's editable and kayboard no longer covers the text you are editing

--- a/ChoreManager/app/src/main/res/layout/activity_new_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_new_chore.xml
@@ -197,17 +197,17 @@
             android:textSize="20sp" />
 
         <ScrollView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="100dp">
 
-            <TextView
+            <EditText
                 android:id="@+id/descTextView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/descTextView"
+                android:hint="@string/desc_hint"
+                android:inputType="textMultiLine"
                 tools:layout_editor_absoluteX="69dp"
-                tools:layout_editor_absoluteY="318dp"
-                tools:text="@string/descText" />
+                tools:layout_editor_absoluteY="318dp" />
 
         </ScrollView>
 
@@ -229,14 +229,15 @@
             android:layout_width="match_parent"
             android:layout_height="100dp">
 
-            <TextView
+            <EditText
                 android:id="@+id/notesTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/descTextView"
+                android:hint="@string/note_hint"
+                android:inputType="textMultiLine"
+                android:maxLength="26"
                 tools:layout_editor_absoluteX="69dp"
-                tools:layout_editor_absoluteY="318dp"
-                tools:text="@string/descText" />
+                tools:layout_editor_absoluteY="318dp" />
 
         </ScrollView>
 
